Add Grafana & Prometheus for monitoring

--- a/roles/mastodon_app/templates/env.j2
+++ b/roles/mastodon_app/templates/env.j2
@@ -42,4 +42,7 @@ PAPERCLIP_ROOT_PATH=/mnt/files/mastodon/{{ mastodon_app_domain }}
 {% endif %}
 
 TRUSTED_PROXY_IP={{ wireguard_network }}
-#asdf
+
+{% if 'monitoring_server' in groups %}
+STATSD_ADDR=localhost:9125
+{% endif %}
